# au-ros-pkg

demo/au/pr2_EF_pos_control_structured_furniture/: package.xml
demo/au/pr2_EF_pos_control_structured_furniture/euslisp/: detect_door_direction.l  open_door_new.l  polycon-circle.l
demo/au/pr2_EF_pos_control_structured_furniture/src/: plot_force_ver2.py  plot_joint_state.py
detect_touched_object/: CMakeLists.txt  manifest.xml  package.xml
detect_touched_object/launch/: extract_object_image.launch
detect_touched_object/src/: convex_hull.cpp  extract_object_image.cpp  extract_object_image.cpp~
drc_tasks/: CMakeLists.txt
drc_tasks/config/: object_manipulation.rviz
drc_tasks/euslisp/: detect_door_direction.l  end-force-estimation.l  hoge.l  make-door.l  open_door_new.l  position-feedback-trajectory-new.l  position-feedback-trajectory.l  pr2-motion-interface.l  pr2_open_door.l  pr2_open_door_new.l  real-endpos-feedback.l
drc_tasks/euslisp/demo/: grasp-object.l  grasp-obstacle-plane.l  manipulate-object.l  pr2-motion-interface.l  pr2_motion_interface.l
drc_tasks/euslisp/obstacle/: grasp-obstacle-plane.l  pr2_motion_interface.l  show-plane.l
drc_tasks/euslisp/old_code/: calc-door-trajectory.l  position-feedback-trajectory-new-use-base.l  pr2_open_door.l
drc_tasks/launch/: ground_object_segmentation.launch
entrance_exam_study/: note.txt
hand_gesture/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~  package.xml
hand_gesture/launch/: extract_line.launch~
hand_gesture/src/: #opencv_handdetect.cpp#  .#elbow_hand_line.cpp  elbow_hand_line.cpp  elbow_hand_line.cpp~  extract_line.cpp  extract_line.cpp.org  extract_line.cpp~  opencv_handdetect.cpp~
learning_image_geometry/: CMakeLists.txt  mainpage.dox  manifest.xml
learning_image_geometry/launch/: draw.launch  draw.launch~
learning_image_geometry/src/: draw_frames.cpp  draw_frames.cpp~
tabletop_au2014/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
tabletop_au2014/euslisp/: grasp_selected_obj.l  pickup.l~  pickupfromtf.l  pickupfromtf.l~  pr2-tabletop-demo-temp.l
