<?xml version="1.0"?>
<package>
  <name>tabletop_au2014</name>
  <version>0.0.0</version>
  <description>The tabletop_au2014 package</description>

  <maintainer email="au@jsk.imi.i.u-tokyo.ac.jp">au</maintainer>
  
  <license>TODO</license>

 <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>


